modif searchScript.js

--- a/css/style.css
+++ b/css/style.css
@@ -354,7 +354,7 @@ table#form tr td {
 }
 /*** partie formulaire ***/
 
-.rdmImg {
+.randImg {
     width: 225px;
     height: 225px;
     margin: 10px auto; 
