--- a/css/style.css
+++ b/css/style.css
@@ -237,106 +237,11 @@ table#links tr td {
 
 
 
-/*** partie CV ***/
-#picCV { 
-	float: right; 
-	height: 150px;
-	padding: 0 25px 0 0;
+
+
+#btndeconnect {
+    float : right;
 }
-
-#objective { 
-	width: 500px;
-	margin-left: 60px;
-	padding: 10px;
-	float: left; 
-	font-family: Georgia, Serif; 
-	font-style: italic;
-	font-size: 13px;
-	color: #666; 
-}
-
-dt { 
-	font-style: italic; 
-	font-weight: bold; 
-	font-size: 16px; 
-	text-align: left; 
-	padding: 0 10px 0 20px; 
-	width: 120px; 
-	float: left; 
-}
-
-dd.list { 
-	width: 600px; 
-	font-family: Calibri; 
-	font-size: 14px;
-	float: left; 
-	padding: 0 0 0 25px;
-	border-left: 1px solid #999;  
-}
-
-ul {
-	margin: 0 0 20px 10px; 
-	list-style-type: circle;
-}
-
-dd.clear { 
-	float: none; 
-	margin: 0; 
-	height: 40px; 
-}
-
-dd div {
-	padding: 0 0 15px 20px; 
-}
-
-* {
-	margin: 0; 
-	padding: 0; 
-}
-
-.clear { 
-	clear: both; 
-}
-
-ul.intern {
-	text-decoration: none;
-	padding: 0 0 0 35px;
-	list-style-type: square;
-}
-
-div.link {
-	text-align:center;
-	font-weight: bold;
-}
-	
-.link  a {
-	text-decoration: none;
-}
-/*** partie CV ***/
-
-
-
-/*** partie galerie d'images ***/
-.miniatures {
-	width: 150px;
-	height: 100px;
-	border: none;
-}
-
-#overlay {
-	display : none; 
-	position: absolute;
-	top: 0; left: 0;
-	width: 100%; height: 100%;
-	text-align: center; 
-	background-color: rgba(0,0,0,0.6);
-}
-
-#carousel {
-	margin: 10px auto 25px auto;
-}
-/*** partie galerie d'images ***/
-
 
 
 /*** partie formulaire ***/
